# sql-query-parser

./: .gitignore  Cargo.toml  Makefile  README.md
grammar/: grammar.pest
src/: lib.rs  main.rs
tests/: parser_rules.rs
