[package]
name = "sql-query-parser"
version = "0.1.0"
edition = "2021"
description = "A comprehensive SQL query parser and analyzer built with Rust, providing detailed metadata extraction and JSON serialization of parsed SQL statements."
license = "MIT"
repository = "https://github.com/Lialoonk/sql-query-parser"
homepage = "https://github.com/Lialoonk/sql-query-parser"
keywords = ["sql", "parser", "analyzer", "database", "query"]
categories = ["parsing", "database"]

[dependencies]
pest = "2.8"
pest_derive = "2.8"
thiserror = "1.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
clap = { version = "4.0", features = ["derive"] }

[dev-dependencies]
anyhow = "1.0"

